Connect to local mssql server

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-E0RF2N9\\SQLEXPRESS;Database=Rocky;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
